# troy-server

./: .gitignore  Cargo.toml  README.md  static
src/: article.rs  main.rs  orm.rs  routes.rs  watch.rs
src/resource/json/: articleCards.json
