[package]
name = "troy-server"
version = "0.1.0"
authors = ["Sid <a15348545942@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"